@@ -3,6 +3,7 @@
 * Further improvements on data.fmquestion
 * Further improvements on data.intervention
 * Page size increase for speed up
+* Improvement on data.partner by preetching related T2FTravelactivity 
 
 4.7
 ----
